--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import "normalize";
 @import '../assets/fonts/stylesheet.css';
+@import '../assets/fonts/style.css';
 @import "interface";
 @import "blocks/header";
 @import "blocks/main";
