--- a/scss/interface.scss
+++ b/scss/interface.scss
@@ -1,7 +1,7 @@
 $bgColorInlineBlock: linear-gradient(90.64deg, #A0C500 -2.66%, #71A742 103.82%);
 $bgColorBlock: #a2c600;
 $linkPageColor: #333333;
-$positionTopBeforeNutritionProgram: -122px;
+$positionTopBeforeNutritionProgram: -91px;
 $dotsColor: rgba(162, 198, 0, 0.27);
 $colorYellow: #CFCF29;
 @mixin activateVerticalTab($NumVerticalTab, $numDayInVerticalTab){
@@ -14,6 +14,11 @@ $colorYellow: #CFCF29;
     display: grid;
   }
 }
+
+a:active, a:focus { outline: 0; }
+
+:focus {outline:0;}
+
 
 * {
   box-sizing: border-box;
@@ -61,6 +66,8 @@ a {
 }
 
 .title {
+  font-family: "Avenir Next";
+  font-weight: bold;
   font-size: calc(2rem + 4px);
   font-weight: bold;
   margin: 0;
@@ -162,7 +169,7 @@ a {
   }
 
   &__description {
-    padding: 15px 16px;
+    padding-top: 9px;
     margin: 0;
     text-align: center;
     max-width: 355px;
@@ -175,6 +182,7 @@ a {
 
 .tab {
   font-size: calc(1rem + 2px);
+  cursor: pointer;
 }
 
 .content {
@@ -325,8 +333,6 @@ a {
 
 .cart-options {
   background: $bgColorInlineBlock;
-  padding-top: 9px;
-
   &:before {
     color: $bgColorBlock;
     content: '';
@@ -337,7 +343,7 @@ a {
     position: relative;
     border: 0.5px solid #a2c600;
     left: -24px;
-    top: -10px;
+    top: -1px;
     display: inline-block;
     width: 86px;
   }
@@ -373,7 +379,6 @@ a {
     grid-gap: 10px;
     justify-content: center;
     align-items: center;
-
     &:after {
       content: '(Примерное меню)';
       font-size: 1em;
@@ -385,6 +390,7 @@ a {
   }
 
   &-button {
+    cursor: pointer;
     font-size: calc(1rem - 2px);
     color: $linkPageColor;
     height: 28px;
@@ -675,6 +681,11 @@ input.input-form{
       top: 0  ;
       background-color: rgba(0, 0, 0, 0.7);
       z-index: 2;
+      &-prob{
+        .form-modal{
+          grid-template-rows: 100px repeat(3, 43px) 26px;
+        }
+      }
     }
   }
   div &-modal{
@@ -700,4 +711,34 @@ input.input-form{
   font-size: 31px;
   color: white;
   cursor: pointer;
+}
+
+.active{
+  &-modal{
+    display: block;
+    opacity: 1;
+  }
+}
+
+.needle{
+  &:before, &:after{
+    content: '';
+    display: inline-block;
+    height: 2px;
+    width: 9px;
+    background-color: $bgColorBlock;
+
+  }
+  &:before{
+    transform: rotate(45deg);
+  }
+
+  &:after {
+    transform: rotate(-45deg) translate(-1px, -2px);
+  }
+  &-active{
+    &:after, &:before{
+      transform: rotate(45deg);
+    }
+  }
 }
