--- a/scss/blocks/who-this-working.scss
+++ b/scss/blocks/who-this-working.scss
@@ -15,6 +15,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 15px;
+    border-radius: 50px;
   }
   &__item{
     display: flex;
