--- a/scss/style.css
+++ b/scss/style.css
@@ -340,6 +340,10 @@ body {
   justify-content: center;
   width: 31px;
   height: 31px; }
+  .icon:hover {
+    background-color: white; }
+    .icon:hover path {
+      fill: #a2c600; }
 
 a {
   text-decoration: none; }
@@ -1222,7 +1226,9 @@ div .form-modal {
     height: 106px;
     display: flex;
     align-items: center;
-    justify-content: center; }
+    justify-content: center;
+    margin-bottom: 15px;
+    border-radius: 50px; }
   .who-this-working__item {
     display: flex;
     flex-direction: column-reverse;
@@ -1409,14 +1415,16 @@ img[src="assets/img/nutrition-program/item-2.png"] {
       border-bottom-left-radius: 0;
       border-bottom-right-radius: 0;
       margin-bottom: -50px;
-      position: relative; }
+      position: relative;
+      cursor: pointer; }
       .accordion-item__trigger_last {
         border-radius: 30px;
         padding-bottom: 22px; }
       .accordion-item__trigger_needle {
         position: absolute;
         right: 41px;
-        top: 21px; }
+        top: 21px;
+        transition: all .5s; }
     .accordion-item__content {
       border-top: 0;
       font-size: calc(1em - 2px);
